--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -4,6 +4,11 @@
     - Use the 'Lato' font family at 18px throughout the body of the document
     - cover background with the "map-bg.jpg" image in the images directory. 
 */
+body {
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    background-image: url(../images/map-bg.jpg);
+}
 
 nav {
     font-family: sans-serif;
@@ -21,6 +26,11 @@ nav {
         - set the font size to 45px 
         - set the font color to #5d4037
 */
+header h1 {
+    font-family: 'Supermercado One', sans-serif;
+    font-size: 45px;
+    color: #5d4037;
+}
 
 /* 
     Update the following ruleset (#menu) to accomplish the following:
@@ -30,6 +40,7 @@ nav {
 #menu {
     columns: 400px 2;
     column-gap: 100px;
+    column-rule: 2px dashed rosybrown;
 }
 
 section {
@@ -45,12 +56,20 @@ h2 {
         - Show each of the section headings of the menu  in small caps
         - set the font color to #6d4c41
 */
+#menu h2 {
+    font-variant: small-caps;
+    color: #6d4c41;
+}
 
 /* 
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
         - Set the font size to 20px
         - Make the font bold
 */
+dt {
+    font-size: 20px;
+    font-weight: bold;
+}
 
 dd {
     margin: 0 0 12px 0;
@@ -70,6 +89,8 @@ dd {
 .price {
     order: 2;
     padding-left: 10px;
+    font: large;
+    color: firebrick;
 }
 
 address {
@@ -80,3 +101,6 @@ address {
     Add a CSS ruleset targeting the footer to accomplish the following:
         - Draw a 2px dashed rosybrown border
 */
+footer{
+    border: 2px dashed rosybrown;
+}
