--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     background-image: url(../images/map-bg.jpg);
+    background-size: cover;
 }
 
 nav {
